# guided-conversations

./: .gitignore  pyproject.toml  readme.md  run.py  setup.py
examples/: basic_conversation.py  financial_advisor.py  language_assessment.py  restaurant_ordering.py  run_conversation.py
src/api/: main.py
src/api/middleware/: auth.py
src/api/routes/: session_manager.py  sessions.py  websocket.py
src/core/config/: models.py
src/core/conversation/: phase.py  tools.py  tracking.py
src/core/realtime/: __init__.py  audio.py  audio_playback.py  events.py  observation_tracker.py  phase_manager.py  session.py
src/core/utils/: errors.py
tests/: direct_websocket_test.py  simple_realtime_test.py
